# PDI-Airflow

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  INSTALL.md  Makefile  README.md  VERSION.md  install.ps1  pyproject.toml  run-carte-cluster.ps1  run-carte.ps1  run.ps1  run.sh  uninstall.ps1
.github/workflows/: ci.yml  release.yml
airflow-pentaho-provider/: .gitignore  CHANGELOG.md  INSTALL.md  README.md  VERSION.md  pyproject.toml
airflow-pentaho-provider/airflow_pentaho/: __init__.py
airflow-pentaho-provider/airflow_pentaho/hooks/: __init__.py  carte.py  kettle.py
airflow-pentaho-provider/airflow_pentaho/operators/: __init__.py  carte.py  kettle.py
airflow-pentaho-provider/airflow_pentaho/triggers/: __init__.py  carte.py
airflow-pentaho-provider/sample_dags/: pdi_deferrable_flow.py  pdi_flow.py
airflow-pentaho-provider/scripts/: test.ps1  test.sh
airflow-pentaho-provider/tests/: conftest.py
airflow-pentaho-provider/tests/unit/: test_provider_info.py
airflow-pentaho-provider/tests/unit/hooks/: test_carte.py  test_kettle.py
airflow-pentaho-provider/tests/unit/operators/: test_carte_job.py  test_carte_trans.py  test_kettle_operators.py
airflow-pentaho-provider/tests/unit/triggers/: test_carte.py
course/: COURSE-UPDATE.md
course/dags/: async_trigger.py  load_testing.py  sync_trigger.py
lab/: LAB-SETUP.md  UBUNTU-SETUP.md  install-ubuntu.sh
lab/carte/: carte-config.xml  repositories.xml
lab/docker/: .env.example  docker-compose.win.yml  docker-compose.yml
pdi2dag/: __init__.py  airflow_api.py  carte.py  cli.py  dpapi.py  generator.py  lineage.py  parser.py  reconcile.py
samples/: nightly_etl.kjb
samples/cscu/: README.md  build_member_mart.ktr  build_student_mart.ktr  cscu_daily_load.kjb  cscu_enrollment_load.kjb  extract_enrollment.ktr  extract_transactions.ktr  import_ach_minio.ktr  (+1 more)
scripts/: carte_run.py  check_versions.py  deploy.ps1  install-service.ps1
tests/: test_carte_enrichment.py  test_cli.py  test_dpapi.py  test_generator.py  test_lineage.py  test_parser.py  test_pdc_emitter.py
workshop/: README.md  WORKSHOP.md
(+76 files in other folders)
